[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "epa-regions"
authors = [{name = "zmoon", email = "zmoon92@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
requires-python = "~=3.8"
dependencies = []

[project.urls]
Home = "https://github.com/zmoon/epa-regions-python"
Source = "https://github.com/zmoon/epa-regions-python"
# Documentation = "https://github.com/zmoon/epa-regions-python"

[tool.flit.sdist]
exclude = [".github/", ".gitignore", "environment.yml"]
